<resources>
    <string name="default_web_client_id">306751667039-1vrcsnsim921975ucp0s0ms7j8n8s2d9.apps.googleusercontent.com</string>
    <string name="login_title">ESNAPP</string>
    <string name="auth_title_register">Hesap oluştur</string>
    <string name="auth_title_login">Giriş yap</string>
    <string name="auth_button_google">Google ile devam et</string>
    <string name="merchant_info_birthdate_hint">Doğum Tarihi</string>
    <string name="merchant_info_city_hint">İl</string>
    <string name="merchant_info_district_hint">İlçe</string>
    <string name="merchant_info_coordinates_hint">Koordinatlar (lat, lon)</string>
    <string name="home_button_orders">Ürünlerim</string>
    <string name="home_button_only_add">Ekle</string>
    <string name="home_button_active_orders">İşlemde Olan Ürünlerim</string>
    <string name="home_button_completed_orders">Tamamlanan Ürünlerim</string>
    <string name="new_order_phone_hint">Telefon (10 hane)</string>
    <string name="new_order_search_phone_desc">Ara</string>
    <string name="new_order_name_hint">Ad</string>
    <string name="new_order_surname_hint">Soyad</string>
    <string name="new_order_email_hint">Mail</string>
    <string name="new_order_product_desc_hint">Ürün Açıklaması</string>
    <string name="new_order_button_add_product">Ürün Ekle</string>
    <string name="home_info_user_welcome_messsage">Merhaba,</string>
    <string name="search_order_button_by_image">Resim ile arama</string>
    <string name="search_order_button_by_phone">Cep telefonu ile arama</string>
    <string name="search_order_button_by_id">Ürün Numarası ile arama</string>
    <string name="search_by_phone_phone_hint">Telefon (10 hane)</string>
    <string name="search_by_phone_button_search">Ara</string>
    <string name="search_by_order_id_hint">Ürün Bilgisi</string>
    <string name="search_by_order_id_button_search">Ara</string>
    <string name="message_template_title">Şablon Mesaj Seçin</string>
    <string name="message_template_add">Şablon Mesaj Ekle</string>
    <string name="message_template_free_text_hint">Free format (max 100 karakter)</string>
    <string name="message_template_button_save_order">Ürünü Kaydet ve Mesaj Gönder</string>
    <string name="message_template_button_update_order">Mesaj Gönder ve Durumu Güncelle</string>
    <string name="order_list_title">Ürünleri Seçin</string>
    <string name="order_list_empty">Bu müşteriye ait ürün bulunamadı</string>
    <string name="error_fill_all_fields">Lütfen tüm alanları doldurun</string>
    <string name="error_phone_10_digits">Telefon 10 hane olmalı</string>
    <string name="error_customer_not_found">Müşteri bulunamadı, bilgileri siz doldurun</string>
    <string name="error_no_message_selected">Mesaj seçin veya girin</string>
    <string name="error_image_upload">Görsel yükleme hatası</string>
    <string name="error_no_records_found">Kayıt bulunamadı</string>
    <string name="info_order_saved">Ürün kaydedildi</string>
    <string name="info_image_search_todo">Resim ile arama (basit eşleştirme uygulanıyor)</string>
    <string name="error_generic">Bir hata oluştu</string>
    <string name="error_camera_permission_denied">Kamera izni verilmedi</string>
    <string name="error_no_image_match">Benzer resimle eşleşen ürün bulunamadı</string>
    <string name="info_image_match_found">%1$d%% benzerlik ile ürün bulundu</string>
    <string name="order_status_matched_product">Ürün: %1$s</string>
    <string name="order_status_matched_product_placeholder">Eşleşen Ürün: -</string>
    <string name="order_status_history_title">Durum Geçmişi</string>
    <string name="order_status_history_empty">Bu ürüne ait durum bilgisi bulunamadı</string>
    <string name="message_template_hint_free_text">Müşteriye gönderilecek notu buraya yazın (opsiyonel)</string>
    <string name="order_status_customer_label">Müşteri: %1$s %2$s</string>
    <string name="order_status_customer_placeholder">Müşteri: -</string>
    <string name="whatsapp_status_message">
    Sayın *%1$s* , \n\n

        *%7$s* işletmesindeki ürününüzün son durumu; \n\n

        👉 *%5$s* olarak değiştirilmiştir. \n\n

        *Ödeme Durumu: %8$s* \n\n

    📦 *Ürün Detay Bilgileri* \n\n

    🔗 %6$s \n\n

    *%7$s*, İyi günler dileriz.
</string>
    <string name="order_status_paid">ÖDENDİ:)</string>
    <string name="order_status_not_paid">ÖDENMEDİ!</string>
    <string name="welcome_message">%1$s %2$s</string>
    <string name="button_logout">Çıkış Yap</string>
    <string name="logout_confirm_title">Çıkış</string>
    <string name="logout_confirm_message">Hesabınızdan çıkmak istiyor musunuz?</string>
    <string name="logout_yes">Evet</string>
    <string name="logout_no">Hayır</string>
    <string name="loading_default">Lütfen bekleyin…</string>
    <string name="order_list_subtitle">Müşterilerinize ait tüm ürünleri görüntüleyin</string>
    <string name="order_list_last_status_format">Son durum: %1$s</string>
    <string name="order_item_last_status_unknown">Bilinmiyor</string>
    <string name="order_item_status_label">Son durum:</string>
    <string name="order_list_item_image_desc">Ürün görseli</string>
    <string name="founded_with_percent">eşleşme oranı ile bulundu.</string>
    <string name="search_results_title">Arama Sonuçları</string>
    <string name="merchant_info_header">İşyeri Bilgileri</string>
    <string name="merchant_info_sub">Lütfen bilgilerinizi eksiksiz doldurun.</string>
    <string name="merchant_info_merchant_name_hint">İşyeri Adı</string>
    <string name="merchant_info_merchant_type_hint">İşyeri Türü</string>
    <string name="merchant_info_mobile_hint">Cep Telefonu (5XX XXX XX XX)</string>
    <string name="merchant_info_name_hint">Ad</string>
    <string name="merchant_info_surname_hint">Soyad</string>
    <string name="merchant_info_coords_placeholder">Konum seçilmedi</string>
    <string name="merchant_info_get_location">Konumu Al</string>
    <string name="merchant_info_button_save">Kaydet</string>
    <string name="error_location_unavailable">Konum bilgisine ulaşılamadı.</string>
    <string name="error_location_permission_denied">Konum izni verilmedi.</string>
    <string name="info_merchant_saved">İş yeri bilgileri kaydedildi.</string>
    <string name="mappicker_instructions">Lütfen haritada iş yeri konumunuzu işaretleyin, ardından "Onayla" butonuna basın.</string>
    <string name="mappicker_confirm">Onayla</string>
    <string name="mappicker_marker_title">Seçilen konum</string>
    <string name="mappicker_no_selection">Lütfen haritada bir konum seçin</string>
    <string name="merchant_info_country_hint">Ülke</string>
    <string name="info_select_location_first">Ülke, il ve ilçe bilgileri konumu seçtiğinizde otomatik olarak alınacaktır.</string>
    <string name="location_selection_go_take_loc_button">Ülke, il ve ilçe bilgisi değişikliği için Konumu Al butonuna tıklayarak lokasyon seçmelisiniz.</string>
    <string name="btn_camera_text">Ürün ile alakalı resim çek</string>
    <string name="error_permission_required">Rehber erişim izni hatası</string>
    <string name="saved_message_templates">Kayıtlı Mesaj Şablonları</string>
    <string name="previous_button">Önceki</string>
    <string name="next_button">Sonraki</string>
    <string name="page_text">Sayfa</string>
    <string name="template_hint_text">Mesaj (Max 100 karakter)</string>
    <string name="template_checkbox_text">Hizmet süreci tamamlanma mesajı mı?</string>
    <string name="phone_number_component">Telefon Numarası</string>
    <string name="payment_done">Ödeme Yapıldı</string>
    <string name="order_process_completed">İşlem Tamamlandı</string>
    <string name="order_number_note">Lütfen Ürün Numarası bilgisini ürünün üzerine not kağıdı ile not edin veya aşağıdaki alana ürün ile alakalı bir metin girin ve devama basın.</string>
    <string name="order_number_continue">Devam.</string>
    <string name="back">Geri</string>
    <string name="dialog_no_match_title">Eşleşme Bulunamadı</string>
    <string name="dialog_no_match_message">Görsel ile eşleşen bir ürün bulunamadı. Ürün metni ile arama ekranına yönlendiriliyorsunuz.</string>
    <string name="dialog_no_match_for_order_message">Bu bilgiler ile herhangi bir ürün bulamadım. İsterseniz işlemde olan ürünlerim sayfasına yönlendirebilirim.</string>
    <string name="ok">Tamam</string>
    <string name="user_info">Kullanıcı Bilgisi</string>
    <string name="profile_info">Profil Bilgilerim</string>
    <string name="home_new_order_add_bottom_text">İşlerini yönetmeye hazır mısın</string>
    <string name="home_app_name">Esnaf Paneli</string>
    <string name="home_welcome_prefix">Merhaba,</string>
    <string name="home_summary_title">GÜNÜN ÖZETİ</string>
    <string name="home_summary_subtitle">Bugünkü Ürünler</string>
    <string name="home_button_new_order">Yeni Kayıt Oluştur</string>
    <string name="home_button_new_order_desc">Hızlıca yeni bir kayıt aç</string>
    <string name="home_button_list_orders">Ürün Listesi</string>
    <string name="home_button_list_orders_desc">Tüm ürünlerini gör ve yönet</string>
    <string name="home_button_message_templates">Mesaj Şablonları</string>
    <string name="home_button_message_templates_desc">Hazır kayıt formlarını kullan</string>
    <string name="home_system_status_active">Sistem aktif ve güncel: %1$s</string>
    <string name="home_profile_desc">Profil Bilgilerim</string>
    <string name="app_name">EsnApp</string>
    <string name="login_welcome_title">Hoş Geldiniz</string>
    <string name="login_welcome_subtitle">İşlerinizi dijital ortamda\nyönetmeye hemen başlayın</string>
    <string name="login_button_create_account">Hesap Oluştur</string>
    <string name="login_button_sign_in">Giriş Yap</string>
    <string name="login_footer_help">Yardıma mı ihtiyacınız var?</string>
    <string name="login_footer_support">Destek Al</string>
    <string name="orders_title">Ürünlerim</string>
    <string name="orders_subtitle">İşletmenizin genel durumu</string>
    <string name="orders_active_title">İşlemde Olan Ürünler</string>
    <string name="orders_active_desc">Şu anki hazırlanan ve\nyoldaki teslimatlar</string>
    <string name="orders_past_title">Tamamlanan Ürünler</string>
    <string name="orders_past_desc">Önceki tüm işlemleriniz ve\nraporlar</string>
    <string name="home_button_search_orders_title">Ürün Arama</string>
    <string name="home_button_search_orders_desc">Ürün numarası veya müşteri ara</string>
    <string name="profile_title">Profil Bilgilerim</string>
    <string name="profile_section_title">İşletme Profili</string>
    <string name="profile_section_desc">Bilgilerinizi buradan güncelleyebilirsiniz</string>
    <string name="profile_label_name">Ad</string>
    <string name="profile_label_surname">Soyad</string>
    <string name="profile_label_merchant_name">İşletme Adı</string>
    <string name="profile_label_merchant_type">İşletme Türü</string>
    <string name="profile_btn_update">Güncelle</string>
    <string name="search_title">Ürün Arama</string>
    <string name="search_subtitle">Lütfen bir arama yöntemi seçin</string>
    <string name="search_image_title">Resim ile Ara</string>
    <string name="search_image_desc">Görsel veya ürün fotoğrafı kullanarak\nhızlıca ürünü bulun</string>
    <string name="search_image_action">FOTOĞRAF ÇEK</string>
    <string name="search_id_title">Ürün Metni ile Ara</string>
    <string name="search_id_desc">Spesifik ürün ID veya fatura\nnumarasını girin</string>
    <string name="search_id_action">SORGULA</string>
    <string name="search_phone_title">Telefon ile Ara</string>
    <string name="search_phone_desc">Müşteri GSM numarası ile tüm\ntamamlanan ürünleri listeleyin</string>
    <string name="search_phone_action">REHBER İÇİNDE ARA</string>
    <string name="button_info">Bilgi</string>
    <string name="flag_tr">Türkçe</string>
    <string name="flag_en">English</string>
    <string name="user_manual_title">Başlık</string>
</resources>