<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_birthdate_hint" />

        <EditText
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_city_hint" />

        <EditText
            android:id="@+id/edtDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_district_hint" />

        <EditText
            android:id="@+id/edtCoordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_coordinates_hint" />

        <EditText
            android:id="@+id/edtMerchantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_merchant_name_hint" />

        <EditText
            android:id="@+id/edtMerchantType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_merchant_type_hint" />

        <EditText
            android:id="@+id/edtMobile"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_mobile_hint" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_name_hint" />

        <EditText
            android:id="@+id/edtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_info_surname_hint" />

        <Button
            android:id="@+id/btnSave"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merchant_info_button_save" />
    </LinearLayout>
</ScrollView>
