<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/new_order_phone_hint" />

            <ImageButton
                android:id="@+id/btnSearchPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_search"
                android:contentDescription="@string/new_order_search_phone_desc" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_order_name_hint" />

        <EditText
            android:id="@+id/edtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_order_surname_hint" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_order_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtProductDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_order_product_desc_hint" />

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_order_button_add_product" />
    </LinearLayout>
</ScrollView>
